add location function

--- a/index.htm
+++ b/index.htm
@@ -24,6 +24,7 @@
         <script src="angular/app.js"></script>
         <script src="angular/routes.js"></script>
         <script src="angular/services.js"></script>
+        <script src="angular/factory.js"></script>
         <script src="angular/controllers.js"></script>
         <script src="angular/directives.js"></script>
 
