--- a/directives/weatherpanel.htm
+++ b/directives/weatherpanel.htm
@@ -4,7 +4,7 @@
 </div> <!-- .forecast-header -->
 <div class="forecast-content">
 	<div class="forecast-icon">
-		<img src="images/icons/icon-3.svg" alt="" width=48>
+		<img src="images/icons/icon-3.svg" alt="" class="icon-responsive">
 	</div>
 	<div class="degree">{{ convertToStandard({ daytimeTemp:weatherDay.main.temp_max }) }}<sup>o</sup></div>
 	<small>{{ convertToStandard({ daytimeTemp:weatherDay.main.temp_min }) }}<sup>o</sup></small>
