add find my location Button

--- a/directives/searchbar.htm
+++ b/directives/searchbar.htm
@@ -3,6 +3,8 @@
 		<form ng-submit="submit()" class="find-location">
 			<input type="text" placeholder="Find your location..." ng-model="city">
 			<input type="submit" value="Find">
+
 		</form>
+		<div align="center"><a href="#/mylocation" class="myloc" >My Location</a></div>
 	</div>
 </div>
