--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
         
         <title>AngularJS Weather Forecast SPA</title>
+        <link rel="shortcut icon" href="https://s3-ap-northeast-1.amazonaws.com/cdn.booksforcast.com/favicon/p8wh-booksfor-cast-square.png">
 
         <!-- Loading third party fonts -->
         <link href="//fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
