--- a/directives/searchbar.htm
+++ b/directives/searchbar.htm
@@ -5,6 +5,6 @@
 			<input type="submit" value="Find">
 
 		</form>
-		<div align="center"><a href="#/mylocation" class="myloc" >My Location</a></div>
+		<div align="center"><a href="#/mylocation" class="myloc" ><i class="fa fa-map-marker" style="font-size:20px;"></i> My Location</a></div>
 	</div>
 </div>
